--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -42,6 +42,7 @@ jobs:
           combine: true
           target: ${{ matrix.config.target }}
           cli: nightly
+          sdk: nightly
 
   package:
     name: Package builds
