--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -39,6 +39,8 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
+          bindings: TimeStepYT/bindings
+          bindings-ref: main
           combine: true
           target: ${{ matrix.config.target }}
           cli: nightly
